# cpp_calc

./: CMakeLists.txt
plugins/: funcdeg.cpp  funcsin.cpp
plugins/funcsin/: funcsin.cpp
src/: calculator.cpp  calculator.h  main.cpp  number.cpp  number.h  plugin_manager.cpp  plugin_manager.h
